--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -21,9 +21,9 @@ a[href*="tel:"] {
 html {
   font-size: 16px;
 
-  @include media-breakpoint-down(xl) {
-    font-size: 14px;
-  }
+  // @include media-breakpoint-down(xl) {
+  //   font-size: 14px;
+  // }
 }
 
 .btn {
@@ -46,11 +46,18 @@ html {
 
   &-link {
     padding: 0;
-    text-decoration: none;
     letter-spacing: 0;
     font-size: $input-font-size;
     border: none;
+
+    &:hover {
+      text-decoration: none;
+    }
   }
+}
+
+.bg-light {
+  background-color: $gray-10 !important;
 }
 
 .page-item + .page-item {
@@ -70,4 +77,66 @@ html {
     width: $pagination-icon-size;
     height: $pagination-icon-size;
   }
+}
+
+.form-label {
+  line-height: $form-label-line-height;
+}
+
+.form-check-input:checked[type=checkbox] {
+  background-size: 13px 13px;
+}
+
+.form-check-input[type="radio"] {
+  background-size: 0.8125rem;
+}
+
+.form-check-input[type=radio] {
+  border-radius: $form-check-input-border-radius;
+}
+
+.form-check-input:checked[type=radio] {
+  background-image: $form-check-input-checked-bg-image;
+}
+
+.form-check-label {
+  font-size: $input-font-size;
+  line-height: $input-line-height;
+  font-weight: $form-label-font-weight;
+}
+
+.form-control[type=file] {
+  border: none;
+  box-shadow: none;
+}
+
+.is-valid .form-control,
+.form-control.is-valid,
+.is-invalid .form-control,
+.form-control.is-invalid,
+.was-validated .form-control:valid,
+.was-validated .form-control:invalid {
+  background-image: none;
+  padding-right: $input-padding-x;
+}
+
+.is-valid::after,
+.is-invalid::after {
+  content: '';
+  width: 1.25rem;
+  height: 1.25rem;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -2rem;
+}
+
+.is-valid::after {
+  background-image: $form-feedback-icon-valid;
+}
+
+.is-invalid::after {
+  background-image: $form-feedback-icon-invalid;
 }
