--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -21,6 +21,7 @@ $spacers: (
   14: $spacer * 0.875,
   20: $spacer * 1.25,
   30: $spacer * 1.875,
+  36: $spacer * 2.25,
 ) !default;
 
 $gray-10:                           #f8fbff !default;
