--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -135,3 +135,9 @@ $pagination-hover-border-color:     $gray-400 !default;
 $pagination-active-color:           $gray-800 !default;
 $pagination-active-bg:              #fff !default;
 $pagination-active-border-color:    $gray-800 !default;
+
+$badge-font-size:                   1em !default;
+$badge-padding-y:                   0 !default;
+$badge-padding-x:                   0.3125em !default;
+$badge-border-radius:               50% !default;
+$offcanvas-box-shadow:              $box-shadow-lg !default;
