--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -13,6 +13,13 @@ body {
   align-content: center;
 }
 
+.lg {
+  max-width: 1180px;
+  width: 100%;
+  min-height: calc(100vh - 240px);
+  overflow: hidden;
+}
+
 .md {
   max-width: 980px;
   width: 100%;
@@ -75,6 +82,114 @@ body {
   padding-left: 1.3125rem;
 }
 
+.btn-group-vertical {
+  padding-top: 2.625rem;
+}
+
+.btn-group-vertical .btn,
+.btn-group .btn {
+  text-decoration: none;
+  font-size: 0.9375rem;
+  line-height: 1.375rem;
+  font-weight: 500;
+  padding: 0.875rem 1.25rem 0.875rem 1.875rem;
+  border-radius: 0 !important;
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+
+.btn-group-vertical .btn[data-bs-toggle="collapse"]::after,
+.btn-group .btn[data-bs-toggle="collapse"]::after {
+  content: '';
+  position: absolute;
+  width: 0.75rem;
+  height: 0.75rem;
+  top: 50%;
+  right: 0.625rem;
+  background-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='path-1-outside-1' maskUnits='userSpaceOnUse' x='0.130255' y='-0.414214' width='11.3137' height='11.3137' fill='black'%3E%3Crect fill='white' x='0.130255' y='-0.414214' width='11.3137' height='11.3137'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1.95093 4.83618L1.3608 5.42631L5.78711 9.85263L10.2134 5.42631L9.62328 4.83618L5.78711 8.67235L1.95093 4.83618Z'/%3E%3C/mask%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1.95093 4.83618L1.3608 5.42631L5.78711 9.85263L10.2134 5.42631L9.62328 4.83618L5.78711 8.67235L1.95093 4.83618Z' fill='%23364A58'/%3E%3Cpath d='M1.3608 5.42631L1.00724 5.07276L0.653689 5.42631L1.00724 5.77987L1.3608 5.42631ZM1.95093 4.83618L2.30449 4.48262L1.95093 4.12907L1.59738 4.48262L1.95093 4.83618ZM5.78711 9.85263L5.43355 10.2062L5.78711 10.5597L6.14066 10.2062L5.78711 9.85263ZM10.2134 5.42631L10.567 5.77987L10.9205 5.42631L10.567 5.07276L10.2134 5.42631ZM9.62328 4.83618L9.97684 4.48262L9.62328 4.12907L9.26973 4.48262L9.62328 4.83618ZM5.78711 8.67235L5.43355 9.0259L5.78711 9.37946L6.14066 9.0259L5.78711 8.67235ZM1.71435 5.77987L2.30449 5.18973L1.59738 4.48262L1.00724 5.07276L1.71435 5.77987ZM6.14066 9.49907L1.71435 5.07276L1.00724 5.77987L5.43355 10.2062L6.14066 9.49907ZM9.85987 5.07276L5.43355 9.49907L6.14066 10.2062L10.567 5.77987L9.85987 5.07276ZM9.26973 5.18973L9.85987 5.77987L10.567 5.07276L9.97684 4.48262L9.26973 5.18973ZM9.26973 4.48262L5.43355 8.3188L6.14066 9.0259L9.97684 5.18973L9.26973 4.48262ZM6.14066 8.3188L2.30449 4.48262L1.59738 5.18973L5.43355 9.0259L6.14066 8.3188Z' fill='%23364A58' mask='url(%23path-1-outside-1)'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  margin-top: -0.375rem;
+}
+
+.btn-group-vertical .btn[data-bs-toggle="collapse"]:hover::after,
+.btn-group .btn[data-bs-toggle="collapse"]:hover::after {
+  background-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='path-1-outside-1' maskUnits='userSpaceOnUse' x='0.130255' y='-0.414214' width='11.3137' height='11.3137' fill='black'%3E%3Crect fill='white' x='0.130255' y='-0.414214' width='11.3137' height='11.3137'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1.95093 4.83618L1.3608 5.42631L5.78711 9.85263L10.2134 5.42631L9.62328 4.83618L5.78711 8.67235L1.95093 4.83618Z'/%3E%3C/mask%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1.95093 4.83618L1.3608 5.42631L5.78711 9.85263L10.2134 5.42631L9.62328 4.83618L5.78711 8.67235L1.95093 4.83618Z' fill='%23fff'/%3E%3Cpath d='M1.3608 5.42631L1.00724 5.07276L0.653689 5.42631L1.00724 5.77987L1.3608 5.42631ZM1.95093 4.83618L2.30449 4.48262L1.95093 4.12907L1.59738 4.48262L1.95093 4.83618ZM5.78711 9.85263L5.43355 10.2062L5.78711 10.5597L6.14066 10.2062L5.78711 9.85263ZM10.2134 5.42631L10.567 5.77987L10.9205 5.42631L10.567 5.07276L10.2134 5.42631ZM9.62328 4.83618L9.97684 4.48262L9.62328 4.12907L9.26973 4.48262L9.62328 4.83618ZM5.78711 8.67235L5.43355 9.0259L5.78711 9.37946L6.14066 9.0259L5.78711 8.67235ZM1.71435 5.77987L2.30449 5.18973L1.59738 4.48262L1.00724 5.07276L1.71435 5.77987ZM6.14066 9.49907L1.71435 5.07276L1.00724 5.77987L5.43355 10.2062L6.14066 9.49907ZM9.85987 5.07276L5.43355 9.49907L6.14066 10.2062L10.567 5.77987L9.85987 5.07276ZM9.26973 5.18973L9.85987 5.77987L10.567 5.07276L9.97684 4.48262L9.26973 5.18973ZM9.26973 4.48262L5.43355 8.3188L6.14066 9.0259L9.97684 5.18973L9.26973 4.48262ZM6.14066 8.3188L2.30449 4.48262L1.59738 5.18973L5.43355 9.0259L6.14066 8.3188Z' fill='%23fff' mask='url(%23path-1-outside-1)'/%3E%3C/svg%3E%0A");
+}
+
+.btn-group-vertical .btn[aria-expanded="true"]::after {
+  background-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='path-1-outside-1' maskUnits='userSpaceOnUse' x='0.130255' y='-0.414214' width='11.3137' height='11.3137' fill='black'%3E%3Crect fill='white' x='0.130255' y='-0.414214' width='11.3137' height='11.3137'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1.95093 4.83618L1.3608 5.42631L5.78711 9.85263L10.2134 5.42631L9.62328 4.83618L5.78711 8.67235L1.95093 4.83618Z'/%3E%3C/mask%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1.95093 4.83618L1.3608 5.42631L5.78711 9.85263L10.2134 5.42631L9.62328 4.83618L5.78711 8.67235L1.95093 4.83618Z' fill='%23fff'/%3E%3Cpath d='M1.3608 5.42631L1.00724 5.07276L0.653689 5.42631L1.00724 5.77987L1.3608 5.42631ZM1.95093 4.83618L2.30449 4.48262L1.95093 4.12907L1.59738 4.48262L1.95093 4.83618ZM5.78711 9.85263L5.43355 10.2062L5.78711 10.5597L6.14066 10.2062L5.78711 9.85263ZM10.2134 5.42631L10.567 5.77987L10.9205 5.42631L10.567 5.07276L10.2134 5.42631ZM9.62328 4.83618L9.97684 4.48262L9.62328 4.12907L9.26973 4.48262L9.62328 4.83618ZM5.78711 8.67235L5.43355 9.0259L5.78711 9.37946L6.14066 9.0259L5.78711 8.67235ZM1.71435 5.77987L2.30449 5.18973L1.59738 4.48262L1.00724 5.07276L1.71435 5.77987ZM6.14066 9.49907L1.71435 5.07276L1.00724 5.77987L5.43355 10.2062L6.14066 9.49907ZM9.85987 5.07276L5.43355 9.49907L6.14066 10.2062L10.567 5.77987L9.85987 5.07276ZM9.26973 5.18973L9.85987 5.77987L10.567 5.07276L9.97684 4.48262L9.26973 5.18973ZM9.26973 4.48262L5.43355 8.3188L6.14066 9.0259L9.97684 5.18973L9.26973 4.48262ZM6.14066 8.3188L2.30449 4.48262L1.59738 5.18973L5.43355 9.0259L6.14066 8.3188Z' fill='%23fff' mask='url(%23path-1-outside-1)'/%3E%3C/svg%3E%0A");
+  transform: rotate(180deg);
+}
+
+.btn-group-item {
+  margin-bottom: 0.75rem;
+  position: relative;
+  width: 100%;
+}
+
+.btn-group-vertical .btn .badge,
+.btn-group .btn .badge {
+  width: 1.4375rem;
+  height: 1.4375rem;
+  line-height: 1.4375rem;
+  padding: 0;
+}
+
+.btn-group-vertical .btn .icon,
+.btn-group .btn .icon {
+  width: 1.375rem;
+  height: 1.375rem;
+  color: #bac8db;
+}
+
+.btn-group-vertical .btn[aria-expanded="true"],
+.btn-group-vertical .btn.active,
+.btn-group-vertical .btn:active,
+.btn-group-vertical .btn:focus,
+.btn-group-vertical .btn:hover,
+.btn-group .btn.active,
+.btn-group .btn:active,
+.btn-group .btn:focus,
+.btn-group .btn:hover {
+  color: #fff;
+  background: #1479ff;
+}
+
+.btn-group-vertical .btn[aria-expanded="true"] .icon,
+.btn-group-vertical .btn.active .icon,
+.btn-group-vertical .btn:active .icon,
+.btn-group-vertical .btn:focus .icon,
+.btn-group-vertical .btn:hover .icon,
+.btn-group .btn.active .icon,
+.btn-group .btn:active .icon,
+.btn-group .btn:focus .icon,
+.btn-group .btn:hover .icon {
+  color: #fff;
+}
+
+.btn-group-vertical ul {
+  padding: 0 0.25rem 1rem 1.875rem;
+}
+
+.btn-group-vertical a {
+  font-size: 0.8125rem;
+  line-height: 1.1875rem;
+  letter-spacing: -0.01em;
+  display: block;
+}
+
+.btn-group-vertical a.active,
+.btn-group-vertical .active a {
+  font-weight: 600;
+}
+
+.btn-group-vertical ul li + li {
+  margin-top: 0.625rem;
+}
+
 .file .form-label {
   font-weight: 500;
   margin-left: 1.375rem;
@@ -92,7 +207,7 @@ body {
   }
 }
 
-.file .btn {
+.file .btn { /* stylelint-disable-line no-descending-specificity */
   color: #fff;
   background: #cfdae8;
 }
@@ -121,7 +236,7 @@ body {
   font-size: 1.125rem;
 }
 
-.step li + li {
+.step li + li { /* stylelint-disable-line no-descending-specificity */
   margin-top: 1.75rem;
 }
 
@@ -138,4 +253,78 @@ body {
 .fsz-18 {
   font-size: 1.125rem;
   line-height: 1.6875rem;
+}
+
+.panel .icon { /* stylelint-disable-line no-descending-specificity */
+  width: 1.25rem;
+  height: 1.25rem;
+  color: #93a6bf;
+}
+
+.panel a span {
+  margin-left: 0.75rem;
+}
+
+.panel a { /* stylelint-disable-line no-descending-specificity */
+  margin-left: 2.625rem;
+}
+
+.panel a:hover .icon { /* stylelint-disable-line no-descending-specificity */
+  color: #1479ff;
+}
+
+@media (max-width: 991.98px) {
+  .panel a { /* stylelint-disable-line no-descending-specificity */
+    margin-left: 2rem;
+  }
+
+  .panel a span {
+    display: none;
+  }
+
+  .panel {
+    position: relative !important;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .panel a { /* stylelint-disable-line no-descending-specificity */
+    margin-left: 1rem;
+  }
+}
+
+#offcanvasMenu {
+  width: 220px;
+}
+
+#offcanvasMenu .offcanvas-body {
+  padding: 0;
+}
+
+@media (min-width: 992px) {
+  #offcanvasMenu {
+    position: static;
+    visibility: visible;
+    width: 100% !important;
+    transform: none;
+    border: none;
+    display: block !important;
+    height: 100%;
+    box-shadow: none;
+  }
+
+  #offcanvasMenu .offcanvas-header {
+    display: none;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .col-sm-auto .col-form-label {
+    padding: 0;
+  }
+
+  .col .form-control:disabled,
+  .col .form-control[readonly] {
+    padding-left: 0;
+  }
 }
