--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -121,7 +121,7 @@ html {
 textarea.form-control:disabled,
 textarea.form-control[readonly] {
   resize: none;
-  height: 8rem !important;
+  height: auto !important;
 }
 
 .is-valid .form-control,
@@ -166,4 +166,63 @@ textarea.form-control[readonly] {
 .btn-group-vertical > .btn,
 .btn-group > .btn {
   flex: inherit;
+}
+
+.container {
+  @include media-breakpoint-down(lg) {
+    max-width: 100%;
+  }
+}
+
+.table {
+  th {
+    font-size: $input-font-size;
+    line-height: $input-line-height;
+    font-weight: $form-label-font-weight;
+    vertical-align: middle;
+    padding-bottom: 0.5rem;
+    padding-left: 0;
+    padding-right: 0;
+
+    & > div {
+      border-left: 1px solid $gray-300;
+      padding-left: $table-cell-padding-x;
+      padding-right: $table-cell-padding-x;
+    }
+
+    &:first-child {
+      div {
+        border-left: none;
+        padding-left: 0;
+      }
+    }
+  }
+
+  td {
+    font-size: $table-font-size;
+    line-height: $table-line-height;
+    height: 2rem;
+    vertical-align: middle;
+    padding-right: 0;
+
+    & > div { /* stylelint-disable-line no-descending-specificity */
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+.form-check-label,
+.dropdown-item {
+  cursor: pointer;
+}
+
+.dropdown-menu li + li {
+  border-top: 1px solid $gray-300;
 }
