--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -141,3 +141,19 @@ $badge-padding-y:                   0 !default;
 $badge-padding-x:                   0.3125em !default;
 $badge-border-radius:               50% !default;
 $offcanvas-box-shadow:              $box-shadow-lg !default;
+
+$table-th-font-weight:              600 !default;
+$table-cell-padding-y:              0 !default;
+$table-cell-padding-x:              0.5rem !default;
+$table-striped-bg:                  #f7faff !default;
+$table-border-width:                0 !default;
+$table-font-size:                   0.875rem !default;
+$table-line-height:                 1.3125rem !default;
+
+$dropdown-border-width:             0 !default;
+$dropdown-padding-y:                0 !default;
+$dropdown-spacer:                   0 !default;
+$dropdown-box-shadow:               $box-shadow-lg !default;
+$dropdown-border-radius:            0.5rem !default;
+$dropdown-item-padding-y:           $spacer * 0.25 !default;
+$dropdown-item-padding-x:           $spacer * 0.75 !default;
