--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -472,3 +472,19 @@ body {
 .password .btn.active .icon {
   color: #bac8db;
 }
+
+.text-write {
+  color: #a5b3c7;
+}
+
+.table .icon-close,
+.close .icon-close {
+  width: .875rem;
+  height: .875rem;
+}
+
+.card .text-light .icon {
+  color: #bac8db;
+  width: 1.25rem;
+  height: 1.25rem;
+}
