--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -75,7 +75,7 @@ $input-line-height:                 1.375 !default;
 $form-label-font-size:              .9375rem !default;
 $form-label-line-height:            1.375 !default;
 $input-padding-x:                   1.1875rem !default;
-$input-padding-y:                   .84375rem !default;
+$input-padding-y:                   .9375rem !default;
 $input-bg:                          transparent !default;
 $input-border-color:                $gray-300 !default;
 $input-placeholder-color:           $gray-300 !default;
@@ -107,7 +107,7 @@ $btn-font-size:                     1rem !default;
 $btn-line-height:                   1.5rem !default;
 $btn-font-weight:                   700 !default;
 $btn-border-radius:                 $spacer/2 !default;
-$btn-padding-y:                     .875rem !default;
+$btn-padding-y:                     .8125rem !default;
 $btn-padding-x:                     .9375rem !default;
 $btn-link-color:                    $body-color !default;
 $btn-focus-box-shadow:              none !default;
@@ -173,3 +173,12 @@ $modal-content-box-shadow-sm-up:    $box-shadow-lg !default;
 $modal-content-border-width:        0 !default;
 $modal-header-padding-y:            .875rem !default;
 $modal-inner-padding:               $spacer * 1.875 !default;
+
+$progress-height:                   .5rem !default;
+$progress-bg:                       #e7edf5 !default;
+
+$btn-close-width:                   .875em !default;
+$btn-close-color:                   #bac8db !default;
+$btn-close-bg:                      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$btn-close-color}' width='14' height='14'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>") !default;
+$btn-close-opacity:                 1 !default;
+$btn-close-focus-opacity:           .5 !default;
