--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -274,7 +274,8 @@ body {
 
 .fsz-18 {
   font-size: 1.125rem;
-  line-height: 1.6875rem;
+  // line-height: 1.6875rem;
+  line-height: 1.8125rem;
 }
 
 .panel .icon { /* stylelint-disable-line no-descending-specificity */
@@ -508,4 +509,10 @@ body {
   color: #bac8db;
   width: 1.25rem;
   height: 1.25rem;
+}
+
+@media (max-width: 1199.98px) {
+  .form-label br {
+    display: none;
+  }
 }
