--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,26 +1,28 @@
-<div class="panel d-flex align-items-center justify-content-between position-absolute top-0 start-0 w-100 pt-3 px-lg-30 mb-3">
+<div class="panel position-absolute top-0 start-0 w-100 pt-3 ps-lg-30 pe-lg-40 mb-3">
+  <div class="d-flex align-items-center justify-content-between me-lg-10">
     <a class="btn btn-primary btn-sm d-lg-none ms-0 me-3 " data-bs-toggle="offcanvas" href="#offcanvasMenu" role="button" aria-controls="offcanvasMenu">
-        <svg class="icon icon-menu text-white">
-            <use xlink:href="#icon-menu"></use>
-        </svg>
+      <svg class="icon icon-menu text-white">
+        <use xlink:href="#icon-menu"></use>
+      </svg>
     </a>
     <a href="index.html" class="d-block logo logo-xs ms-0 me-auto">
-        <img src="../images/logo.svg" alt="ZoomTender" class="img-fluid d-block">
+      <img src="../images/logo.svg" alt="ZoomTender" class="img-fluid d-block">
     </a>
     <a href="#" class="text-reset text-decoration-none d-inline-flex align-items-center">
-        <svg class="icon icon-email">
-            <use xlink:href="#icon-email"></use>
-        </svg>
+      <svg class="icon icon-email">
+        <use xlink:href="#icon-email"></use>
+      </svg>
     </a>
     <a href="#" class="text-reset text-decoration-none d-inline-flex align-items-center">
-        <svg class="icon icon-alarm">
-            <use xlink:href="#icon-alarm"></use>
-        </svg>
+      <svg class="icon icon-alarm">
+        <use xlink:href="#icon-alarm"></use>
+      </svg>
     </a>
     <a href="#" class="text-reset text-decoration-none d-inline-flex align-items-center">
-        <svg class="icon icon-logout">
-            <use xlink:href="#icon-logout"></use>
-        </svg>
-        <span class="form-label fw-normal">Log Out</span>
+      <svg class="icon icon-logout">
+        <use xlink:href="#icon-logout"></use>
+      </svg>
+      <span class="form-label fw-normal">Log Out</span>
     </a>
+  </div>
 </div>
