--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -22,6 +22,7 @@ $spacers: (
   20: $spacer * 1.25,
   30: $spacer * 1.875,
   36: $spacer * 2.25,
+  40: $spacer * 2.5,
 ) !default;
 
 $gray-10:                           #f8fbff !default;
