--- a/src/components/modal.html
+++ b/src/components/modal.html
@@ -5,33 +5,33 @@
                 <h5 class="modal-title" id="exampleModalLabel">&nbsp;</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body pt-0">
+            <div class="modal-body py-0">
                 <ul class="list-unstyled mb-30 lh-lg">
-                    <li class="mb-3 d-flex">
-                        <span class="form-label me-2">Subject:</span>
+                    <li class="mb-4 d-flex">
+                        <span class="fs-6 lh-base form-label me-2">Subject:</span>
                         <small>Amet </small>
                     </li>
-                    <li class="mb-3 d-flex">
-                        <span class="form-label me-2">Sender:</span>
+                    <li class="mb-4 d-flex">
+                        <span class="fs-6 lh-base form-label me-2">Sender:</span>
                         <small>Floyd Miles</small>
                     </li>
-                    <li class="mb-3 d-flex">
-                        <span class="form-label me-2">Date:</span>
+                    <li class="mb-4 d-flex">
+                        <span class="fs-6 lh-base form-label me-2">Date:</span>
                         <small>11/07/2021 11:53</small>
                     </li>
-                    <li class="mb-3 d-flex">
-                        <span class="form-label me-2">Recipient:</span>
+                    <li class="mb-4 d-flex">
+                        <span class="fs-6 lh-base form-label me-2">Recipient:</span>
                         <small>s1</small>
                     </li>
-                    <li class="mb-3 d-flex">
-                        <span class="form-label me-2">Message:</span>
+                    <li class="mb-4 d-flex">
+                        <span class="fs-6 lh-base form-label me-2">Message:</span>
                         <small>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt </small>
                     </li>
                 </ul>
             </div>
             <div class="modal-footer justify-content-start pb-36 pt-0">
-                <button type="button" class="btn btn-primary px-4">Reply</button>
-                <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Delete</button>
+                <button type="button" class="btn btn-primary px-30 me-3">Reply</button>
+                <button type="button" class="btn btn-danger px-30 me-3" data-bs-dismiss="modal">Delete</button>
             </div>
         </div>
     </div>
