--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -106,7 +106,8 @@ body {
   font-size: .9375rem;
   line-height: 1.375rem;
   font-weight: 500;
-  padding: .875rem 1.25rem .875rem 1.875rem;
+  // padding: .875rem 1.25rem .875rem 1.875rem;
+  padding: .625rem 1.25rem .875rem 1.5rem;
   border-radius: 0 !important;
   display: flex;
   width: 100%;
@@ -508,6 +509,7 @@ body {
   color: #a5b3c7;
 }
 
+.table .icon-delete,
 .table .icon-close,
 .close .icon-close {
   width: .875rem;
