--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -273,6 +273,7 @@ textarea.form-control[readonly] {
   line-height: $small-line-height;
 }
 
+.small,
 small {
   font-size: $small-font-size;
   line-height: $small-line-height;
