--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -177,6 +177,8 @@ $modal-content-border-width:        0 !default;
 $modal-header-padding-y:            .875rem !default;
 $modal-inner-padding:               $spacer * 1.875 !default;
 $modal-md:                          544px !default;
+$modal-backdrop-bg:                 #000 !default;
+$modal-backdrop-opacity:            .1 !default;
 
 $progress-height:                   .5rem !default;
 $progress-bg:                       #e7edf5 !default;
