--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -145,7 +145,9 @@ textarea.form-control[readonly] {
 .was-validated .form-control:invalid {
   background-image: none;
   padding-right: $input-padding-x;
+}
 
+.is-valid {
   @include media-breakpoint-down(lg) {
     padding-right: $input-padding-x * 2;
   }
@@ -164,7 +166,7 @@ textarea.form-control[readonly] {
   right: -2rem;
 
   @include media-breakpoint-down(lg) {
-    right: $input-padding-x / 3;
+    right: 0;
   }
 }
 
