--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -163,6 +163,8 @@ $dropdown-box-shadow:               $box-shadow-lg !default;
 $dropdown-border-radius:            .5rem !default;
 $dropdown-item-padding-y:           $spacer * .25 !default;
 $dropdown-item-padding-x:           $spacer * .75 !default;
+$dropdown-link-hover-color:         #fff !default;
+$dropdown-link-hover-bg:            $blue !default;
 
 $card-border-color:                 rgba($gray-300, .5) !default;
 $card-spacer-y:                     $spacer * .7 !default;
